# dual

./: .gitignore  .travis.yml  LICENSE  README  README.md  dual-game.cabal  dual.cabal  dual.hs
.builds/: all.yml
