name:                dual-game
version:             0.1.0.0
synopsis:            Network multiplayer shooting game inspired (well... copied) from dual for android
-- description:         
homepage:            https://github.com/fgaz/dual
license:             MIT
license-file:        LICENSE
author:              Francesco Gazzetta
maintainer:          francygazz@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
extra-source-files:  README
cabal-version:       >=1.10

executable dual
  main-is:             dual.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.12 ,
                       websockets >=0.11 && <0.13 ,
                       cereal >=0.5 && <0.6,
                       gloss >=1.9 && <1.13 ,
                       bifunctors >=5.2 && <5.6,
                       network >=2.6 && <2.7
  -- hs-source-dirs:      
  default-language:    Haskell2010
